--- a/assignment5/app/src/main/res/layout/restart.xml
+++ b/assignment5/app/src/main/res/layout/restart.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,28 +10,31 @@
         android:id="@+id/textRestart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="137dp"
+        android:layout_centerInParent="false"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"
         android:text="TextView"
-        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="181dp" />
 
     <Button
         android:id="@+id/btnRestart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="161dp"
+        android:layout_marginLeft="161dp"
+        android:layout_marginTop="400dp"
         android:onClick="btnRestartClick"
-        android:text="restart"
-        app:layout_constraintTop_toBottomOf="@+id/textRestart"
-        tools:layout_editor_absoluteX="161dp" />
+        android:text="restart" />
 
     <Button
         android:id="@+id/btnMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="143dp"
+        android:layout_marginLeft="143dp"
+        android:layout_marginTop="500dp"
         android:onClick="btnMenuClick"
-        android:text="back to menu"
-        app:layout_constraintTop_toBottomOf="@+id/btnRestart"
-        tools:layout_editor_absoluteX="143dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:text="back to menu" />
+</RelativeLayout>
