adding quit functionality and partially updating README.md

--- a/assignment5/app/src/main/res/layout/activity_main.xml
+++ b/assignment5/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,15 @@
         android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnTTT" />
+
+    <Button
+        android:id="@+id/btnQuit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="162dp"
+        android:layout_marginLeft="162dp"
+        android:layout_marginTop="70dp"
+        android:text="Exit"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSud" />
 </androidx.constraintlayout.widget.ConstraintLayout>
