--- a/assignment5/app/src/main/res/layout/activity_main.xml
+++ b/assignment5/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="68dp"
         android:layout_marginLeft="68dp"
         android:layout_marginTop="124dp"
-        android:text="Asssignment 5 Application"
+        android:text="Assignment 5 Application"
         android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
